--- a/Visualizations_EDA.Rmd
+++ b/Visualizations_EDA.Rmd
@@ -11,8 +11,21 @@ knitr::opts_chunk$set(echo = TRUE)
 library(ggplot2)
 library(dplyr)
 library(tidyr)
+library(boot)
 dat = read.csv('brfss_final.csv')
 ```
+
+## Table 1
+```{r}
+library(table1)
+dat1 <- dat
+dat1$MICHD <- factor(dat1$MICHD, levels=c(1,2),
+                     labels=c("Reported having MI or CHD", "Did not report having MI or CHD"))
+table1(~ .- CVDINFR4 - CVDCRHD4 | MICHD, data=dat1)
+```
+
+
+
 ### Explore target variable
 ```{r}
 MI_dat <- dat
