--- a/LH_SVM_LogReg.Rmd
+++ b/LH_SVM_LogReg.Rmd
@@ -82,62 +82,50 @@ test <- dat[-train_index, ]
 train$MICHD <- make.names(train$MICHD)
 train$CVDCRHD4 <- make.names(train$CVDCRHD4)
 train$CVDINFR4 <- make.names(train$CVDINFR4)
+test$MICHD <- make.names(test$MICHD)
+test$CVDCRHD4 <- make.names(test$CVDCRHD4)
+test$CVDINFR4 <- make.names(test$CVDINFR4)
 #mylogit <- glm(MICHD ~ .- CVDINFR4 - CVDCRHD4,data=train, na.action = na.omit, family="binomial")
 library(caret)
-ctrl <- trainControl(method = "cv",number = 10,classProbs = TRUE,summaryFunction = twoClassSummary)
+ctrl <- trainControl(method = "cv",number = 10,classProbs = TRUE,
+                     summaryFunction = twoClassSummary, savePredictions = TRUE)
 fit_michd <- train(MICHD ~ .- CVDINFR4 - CVDCRHD4, data = train, method = "glm", 
                    family = "binomial", trControl = ctrl, metric = "ROC")
 result_MICHD <- data.frame(fit_michd$results)
 result_MICHD <- result_MICHD[,2:4]
 result_MICHD <- cbind(Model = "Plain Logistic Regression", Outcome = "MICHD", result_MICHD)
-fit_mi <- train(CVDINFR4 ~ .- MICHD - CVDCRHD4, data = train, method = "glm", 
-                   family = "binomial", trControl = ctrl, metric = "ROC")
-result_MI <- data.frame(fit_mi$results)
-result_MI <- result_MI[,2:4]
-result_MI <- cbind(Model = "Plain Logistic Regression", Outcome = "MI", result_MI)
-fit_chd <- train(CVDCRHD4 ~ .- CVDINFR4 - MICHD, data = train, method = "glm", 
-                   family = "binomial", trControl = ctrl, metric = "ROC")
-result_CHD <- data.frame(fit_chd$results)
-result_CHD <- result_CHD[,2:4]
-result_CHD <- cbind(Model = "Plain Logistic Regression", Outcome = "CHD", result_CHD)
-
-result_log <- rbind(result_MI, result_CHD, result_MICHD)
-result_log
+# fit_mi <- train(CVDINFR4 ~ .- MICHD - CVDCRHD4, data = train, method = "glm", 
+#                    family = "binomial", trControl = ctrl, metric = "ROC")
+# result_MI <- data.frame(fit_mi$results)
+# result_MI <- result_MI[,2:4]
+# result_MI <- cbind(Model = "Plain Logistic Regression", Outcome = "MI", result_MI)
+# fit_chd <- train(CVDCRHD4 ~ .- CVDINFR4 - MICHD, data = train, method = "glm", 
+#                    family = "binomial", trControl = ctrl, metric = "ROC")
+# result_CHD <- data.frame(fit_chd$results)
+# result_CHD <- result_CHD[,2:4]
+# result_CHD <- cbind(Model = "Plain Logistic Regression", Outcome = "CHD", result_CHD)
+# 
+# result_log <- rbind(result_MI, result_CHD, result_MICHD)
+# result_log
 
 log_pred <- predict(fit_michd, newdata = test)
 cm <- confusionMatrix(data = log_pred, reference = factor(test$MICHD))
 cm
+
+# Extract the prediction values as numeric
+log_pred <- as.numeric(predict(fit_michd, newdata = test))
+roc_data <- data.frame(actual = test$MICHD, predicted = log_pred)
 library(pROC)
-svm_pred <- predict(svm_poly, newdata = test, type = "prob")
-svm_auc <- roc(factor(test$MICHD), svm_pred[,"X1"])$auc
-svm_auc
-
-
-################################## Ridge Regression ############################
-# set up grid of lambda values to try
-lambda_grid <- 10^seq(-4, 4, by = 1)
-# perform cross-validation to tune lambda
-cv_results <- cv.glmnet(x = model.matrix(MICHD ~ .- CVDINFR4 - CVDCRHD4, data = train),
-                        y = train$MICHD,
-                        alpha = 0,  # L2 penalty (ridge regression)
-                        family = "binomial",
-                        type.measure = "class",  # use classification accuracy as evaluation metric
-                        lambda = lambda_grid)
-# select lambda that yields best classification accuracy
-best_lambda <- cv_results$lambda.min
-# train model on full training set with selected lambda
-mylogit <- glmnet(x = model.matrix(MICHD ~ .- CVDINFR4 - CVDCRHD4, data = train),
-                  y = train$MICHD,
-                  alpha = 0,  # L2 penalty (ridge regression)
-                  family = "binomial",
-                  lambda = best_lambda)
-# evaluate model performance on test set
-pred <- predict(mylogit, newx = model.matrix(MICHD ~ .- CVDINFR4 - CVDCRHD4, data = test))
-pred_class <- ifelse(pred > 0, 1, 0)
-accuracy <- mean(pred_class == test$MICHD)
-sensitivity <- sum(pred_class[test$MICHD == 1] == 1) / sum(test$MICHD == 1)
-specificity <- sum(pred_class[test$MICHD == 0] == 0) / sum(test$MICHD == 0)
+roc <- roc(roc_data$actual, roc_data$predicted)
+ggplot(data = data.frame(x = 1 - roc$specificities, y = roc$sensitivities)) +
+  geom_line(aes(x = x, y = y)) +
+  geom_abline(slope = 1, intercept = 0, linetype = "dashed") +
+  labs(title = "Receiver Operating Characteristic (ROC) Curve",
+       x = "False Positive Rate (1 - Specificity)",
+       y = "True Positive Rate (Sensitivity)")
 ```
+
+
 
 ## Ridge & Lasso for Feature Selection
 
@@ -196,9 +184,6 @@ result_poly_MICHD <- cbind(Model = "SVM - Polynomial", Outcome = "MICHD", result
 result_poly_MICHD
 svm_poly$bestTune # degree = 2, scale = 0.01, C = 0.25
 # Predict on test dataset
-test$MICHD <- make.names(test$MICHD)
-test$CVDCRHD4 <- make.names(test$CVDCRHD4)
-test$CVDINFR4 <- make.names(test$CVDINFR4)
 svm_pred <- predict(svm_poly, newdata = test)
 # Calculate accuracy
 cm <- confusionMatrix(data = svm_pred, reference = factor(test$MICHD))
@@ -220,3 +205,29 @@ svm_auc
 # test$CVDCRHD4 <- factor(ifelse(test$CVDCRHD4 == 2, "no", "yes"))
 ```
 
+```{r}
+################################## Ridge Regression ############################
+# set up grid of lambda values to try
+lambda_grid <- 10^seq(-4, 4, by = 1)
+# perform cross-validation to tune lambda
+cv_results <- cv.glmnet(x = model.matrix(MICHD ~ .- CVDINFR4 - CVDCRHD4, data = train),
+                        y = train$MICHD,
+                        alpha = 0,  # L2 penalty (ridge regression)
+                        family = "binomial",
+                        type.measure = "class",  # use classification accuracy as evaluation metric
+                        lambda = lambda_grid)
+# select lambda that yields best classification accuracy
+best_lambda <- cv_results$lambda.min
+# train model on full training set with selected lambda
+mylogit <- glmnet(x = model.matrix(MICHD ~ .- CVDINFR4 - CVDCRHD4, data = train),
+                  y = train$MICHD,
+                  alpha = 0,  # L2 penalty (ridge regression)
+                  family = "binomial",
+                  lambda = best_lambda)
+# evaluate model performance on test set
+pred <- predict(mylogit, newx = model.matrix(MICHD ~ .- CVDINFR4 - CVDCRHD4, data = test))
+pred_class <- ifelse(pred > 0, 1, 0)
+accuracy <- mean(pred_class == test$MICHD)
+sensitivity <- sum(pred_class[test$MICHD == 1] == 1) / sum(test$MICHD == 1)
+specificity <- sum(pred_class[test$MICHD == 0] == 0) / sum(test$MICHD == 0)
+```
